Inicio de Estudos

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <ul>
-        <h1>Inicio</h1>
+        <h1>Inicio de Estudo</h1>
          <p>
         
             <li><strong>Negrito</strong></li>
